modules/gdscript/tests/scripts/analyzer/errors/export_node_in_non_node_derived_class_3.gd
# GH-82809

extends Resource

@export var node_array: Array[Node]

func test():
	pass
